// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomationSubscriptionModal /> should display image 1`] = `
<img
  alt="automation features"
  class="image"
  src="foo.png"
/>
`;

exports[`<AutomationSubscriptionModal /> should display loader 1`] = `
<button
  class="wrapper fill primary medium isDisabled"
  disabled=""
  type="button"
>
  <svg
    class="spinner gloom spinner"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="100%"
  >
    <circle
      class="dot"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="circle"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  I am sure
</button>
`;

exports[`<AutomationSubscriptionModal /> should not render the modal 1`] = `
<body>
  <div />
</body>
`;

exports[`<AutomationSubscriptionModal /> should render for customers already with full add-on features 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Manage automation add-on
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modalBody modal-body"
              data-candu-id="cancel-automation-addon-modal-body"
            >
              <div
                class="description"
              >
                <div
                  class="flex"
                >
                  <div>
                    Your current subscription started on
                     
                    <b>
                      Aug 22
                    </b>
                    .
                    <br />
                    <br />
                    If you cancel now, you will lose access to self-service
                     
                    custom report issue flow 
                    immediately.
                  </div>
                  <div
                    class="amountWrapper amount"
                  >
                    <span
                      class="amount"
                      id="subscription-amount-tooltip-target-3"
                    >
                      <b>
                        $0
                      </b>
                       
                      / 
                      month
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="footer footerUnsubscribe modal-footer"
            >
              <button
                class="wrapper fill destructive medium"
                type="button"
              >
                Cancel subscription
              </button>
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                OK
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;

exports[`<AutomationSubscriptionModal /> should render the modal 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Confirm automation add-on subscription
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modalBody modal-body"
              data-candu-id="manage-automation-addon-modal-body"
            >
              <div
                class="description"
              >
                <div
                  class="flex"
                >
                  <div>
                    Unlock advanced features of the self-service, and track the performance!
                    <br />
                    Questions?
                     
                    <a
                      href="mailto:undefined"
                    >
                      <b>
                        Get in touch!
                      </b>
                    </a>
                  </div>
                  <div
                    class="amountWrapper amount"
                  >
                    <span
                      class="amount"
                      id="subscription-amount-tooltip-target-1"
                    >
                      <span
                        class="fullAmount"
                      >
                        $40
                      </span>
                      <wbr />
                      <b>
                        $20
                      </b>
                       
                      / 
                      month
                    </span>
                  </div>
                </div>
                <div
                  class="features"
                >
                  <li
                    class="d-flex align-items-center featureListItem"
                  >
                    <span
                      class="featureIcon mr-3"
                    >
                      <i
                        class="icon material-icons"
                      >
                        low_priority
                      </i>
                    </span>
                    <span>
                      Track, Return, Cancel & Custom 
                      <b>
                        workflows
                      </b>
                    </span>
                  </li>
                  <li
                    class="d-flex align-items-center featureListItem"
                  >
                    <span
                      class="featureIcon mr-3"
                    >
                      <i
                        class="icon material-icons"
                      >
                        slow_motion_video
                      </i>
                    </span>
                    <span>
                      Self-service portal in 
                      <b>
                        chat
                      </b>
                       and
                       
                      <b>
                        help center
                      </b>
                    </span>
                  </li>
                  <li
                    class="d-flex align-items-center featureListItem"
                  >
                    <span
                      class="featureIcon mr-3"
                    >
                      <i
                        class="icon material-icons"
                      >
                        insights
                      </i>
                    </span>
                    <span>
                      Self-service 
                      <b>
                        statistics
                      </b>
                    </span>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="footer modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                class="wrapper fill primary medium"
                type="button"
              >
                I am sure
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;
